--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -1,18 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-	<title>Store</title>
-	<link rel="stylesheet" href="">
-	<script src="./script.js" type="text/javascript" charset="utf-8" async defer>
-		
-	</script>
-</head>
-<body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+            crossorigin="anonymous"
+        >
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./style.css">
+        <title>Store</title>
+        <link rel="stylesheet" href="">
+        <script
+            src="./script.js"
+            type="text/javascript"
+            charset="utf-8"
+            async
+            defer
+        ></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg px-5">
+            <div class="container-fluid">
+                <a class="Navbar-logo navbar-brand" href="#">
+                    <img
+                        src="../Assets/Navbar Logo.png"
+                        alt="logo"
+                        srcset=""
+                        height="40px"
+                        width="40px"
+                    >
+                </a>
+                <a class="navbar-brand text-success" href="#">Semmandalluwa</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary" href="#">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="card-test mt-4" style="width: 18rem;">
+            <img src="../assets/card.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Andrew tate For sale.its cheap only from Semmandulluwa</p>
+                <p class="fw-light text-secondary">
+                    <i class="fa-star"></i>
+                    4.3 (35 reviews)
+                </p>
+                <p class="card-title">
+                    $2
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
