--- a/client/index.html
+++ b/client/index.html
@@ -1,63 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-            crossorigin="anonymous"
-        >
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link rel="icon" href="/path/to/favicon.ico">
-        <link rel="stylesheet" href="./style.css">
-        <script src="script.js"></script>
-        <title>Home-Semmandalluwa</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg px-5">
-            <div class="container-fluid">
-                <a class="Navbar-logo navbar-brand" href="#">
-                    <img
-                        src="./Assets/Navbar Logo.png"
-                        alt="logo"
-                        srcset=""
-                        height="40px"
-                        width="40px"
-                    >
-                </a>
-                <a class="navbar-brand text-success" href="#">Semmandalluwa</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="icon" href="/path/to/favicon.ico">
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
+    <title>Home-Semmandalluwa</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg px-5">
+        <div class="container-fluid">
+            <a class="Navbar-logo navbar-brand" href="#">
+                <img src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+            </a>
+            <a class="navbar-brand text-success" href="#">Semmandalluwa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-success" href="./pages/store.html">Store</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-primary" href="#">Login</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary" href="#">Login</a>
+                    </li>
+                </ul>
             </div>
+        </div>
         </div>
     </nav>
     <div class="landing-Background text-white d-flex flex-column justify-content-center align-items-start px-5">
@@ -136,4 +119,5 @@
         </div>
     </footer>
 </body>
+
 </html>
