--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./pages style.css">
     <title>Store</title>
     <link rel="stylesheet" href="">
     <script src="./script.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 
 <body>
+    <!--Navbar section-->
     <nav class="navbar navbar-expand-lg px-5">
         <div class="container-fluid">
             <a class="Navbar-logo navbar-brand" href="#">
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-success" aria-current="page" href="file:///C:/Users/walee/Desktop/Coding/Web%20design%20personal/Farm%20Website/Semmandalluwa.lk/client/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
@@ -38,24 +39,38 @@
         </div>
         </div>
     </nav>
-    <div class="cards">
-        <div class="container">
-            <div class="card mt-4" style="width: 18rem;">
-                <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Bananas</h5>
-                    <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
-                    <a href="#" class="btn btn-danger">Buy Now!</a>
+
+    <!--Cards section-->
+    <div class="cointainer-fluid cards">
+        <div class="d-flex mt-4 me-5">
+            <div class="container">
+                <div class="card mt-4" style="width: 18rem;">
+                    <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Bananas</h5>
+                        <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
+                        <a href="#" class="btn btn-danger">Buy Now!</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="card" style="width: 18rem;">
-                <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Mangos</h5>
-                    <p class="card-text">A mango is an edible stone fruit produced by the tropical tree Mangifera indica.</p>
-                    <a href="#" class="btn btn-success">Buy Now!</a>
+            <div class="container">
+                <div class="card mt-4" style="width: 18rem;">
+                    <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Mangoes</h5>
+                        <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
+                        <a href="#" class="btn btn-success">Buy Now!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="card mt-4" style="width: 18rem;">
+                    <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Wood Apple</h5>
+                        <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
+                        <a href="#" class="btn btn-primary">Buy Now!</a>
+                    </div>
                 </div>
             </div>
         </div>
