Edited Login page & made a few changes

--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -14,25 +14,25 @@
 
 <body>
     <!--Navbar section-->
-    <nav class="navbar navbar-expand-lg px-5">
+    <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
             <a class="Navbar-logo navbar-brand" href="#">
-                <img src="../Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+                <img class="rounded-circle" src="../Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
             </a>
-            <a class="navbar-brand text-success" href="#">Semmandalluwa</a>
+            <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-success" aria-current="page" href="file:///C:/Users/walee/Desktop/Coding/Web%20design%20personal/Farm%20Website/Semmandalluwa.lk/client/index.html">Home</a>
+                        <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Login</a>
+                        <a class="btn btn-primary" href="../LogIn page/index.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -41,40 +41,47 @@
     </nav>
 
     <!--Cards section-->
-    <div class="cointainer-fluid cards">
+    <div class="cointainer cards">
         <div class="d-flex mt-4 me-5">
-            <div class="container">
-                <div class="card mt-4" style="width: 18rem;">
-                    <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Bananas</h5>
-                        <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
-                        <a href="#" class="btn btn-danger">Buy Now!</a>
+            <div class="row g-3">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="container">
+                        <div class="card mt-4" style="width: 18rem;">
+                            <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Bananas</h5>
+                                <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
+                                <a href="#" class="btn btn-danger">Buy Now!</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="card mt-4" style="width: 18rem;">
-                    <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Mangoes</h5>
-                        <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
-                        <a href="#" class="btn btn-success">Buy Now!</a>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="container">
+                    <div class="card mt-4" style="width: 18rem;">
+                        <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Mangoes</h5>
+                            <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
+                            <a href="#" class="btn btn-success">Buy Now!</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="card mt-4" style="width: 18rem;">
-                    <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Wood Apple</h5>
-                        <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
-                        <a href="#" class="btn btn-primary">Buy Now!</a>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="container">
+                    <div class="card mt-4" style="width: 18rem;">
+                        <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Wood Apple</h5>
+                            <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
+                            <a href="#" class="btn btn-primary">Buy Now!</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
