--- a/client/index.html
+++ b/client/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg px-5">
+    <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
             <a class="Navbar-logo navbar-brand" href="#">
-                <img src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+                <img class="rounded-circle" src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
             </a>
-            <a class="navbar-brand text-success" href="#">Semmandalluwa</a>
+            <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,7 +36,7 @@
                         <a class="nav-link text-success" href="./pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Login</a>
+                        <a class="btn btn-primary" href="./LogIn page/index.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
                             <a href="#">our services</a>
                         </li>
                         <li>
-                            <a href="#">our Products</a>
+                            <a href="./pages/store.html">our Products</a>
                         </li>
                         <li>
                             <a href="#">privacy policy</a>
