removed unwanted items

--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -41,47 +41,43 @@
     </nav>
 
     <!--Cards section-->
-    <div class="cointainer cards">
-        <div class="d-flex mt-4 me-5">
-            <div class="row g-3">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="container">
-                        <div class="card mt-4" style="width: 18rem;">
-                            <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Bananas</h5>
-                                <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
-                                <a href="#" class="btn btn-danger">Buy Now!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="container">
-                    <div class="card mt-4" style="width: 18rem;">
-                        <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Mangoes</h5>
-                            <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
-                            <a href="#" class="btn btn-success">Buy Now!</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="container">
-                    <div class="card mt-4" style="width: 18rem;">
-                        <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Wood Apple</h5>
-                            <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
-                            <a href="#" class="btn btn-primary">Buy Now!</a>
-                        </div>
-                    </div>
-                </div>
+    <div class="container product-card-list mt-4 ">
+        <div class="card ">
+            <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Bananas</h5>
+                <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
+                <a href="#" class="btn btn-danger">Buy Now!</a>
             </div>
         </div>
+
+        <div class="card ">
+            <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Mangoes</h5>
+                <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
+                <a href="#" class="btn btn-success">Buy Now!</a>
+            </div>
+        </div>
+
+        <div class="card ">
+            <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Wood Apple</h5>
+                <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
+                <a href="#" class="btn btn-primary">Buy Now!</a>
+            </div>
+        </div>
+
+        <div class="card ">
+            <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Wood Apple</h5>
+                <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
+                <a href="#" class="btn btn-primary">Buy Now!</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
