removed unwanted code

--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -55,7 +55,7 @@
             <img src="../Assets/Mango.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Mangoes</h5>
-                <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangos were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
+                <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangoes were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
                 <a href="#" class="btn btn-success">Buy Now!</a>
             </div>
         </div>
