changed comment name

--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <!--Cards section-->
+    <!--Item Cards section-->
     <div class="container product-card-list mt-4 ">
         <div class="card ">
             <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
