--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./pages style.css">
     <title>Store</title>
-    <link rel="stylesheet" href="">
     <script src="./script.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 
@@ -69,12 +68,52 @@
             </div>
         </div>
 
-        <div class="card ">
-            <img src="../Assets/Wood Apple.jpg" class="card-img-top" alt="...">
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/Cashew.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Wood Apple</h5>
-                <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
+                <h5 class="card-title">Cashew</h5>
+                <p class="card-text"> The cashew you eat is actually the seed. Initially, it is surrounded by a double shell with components like urushiol and a potential skin irritant.</p>
+                <a href="#" class="btn btn-warning">Buy Now!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/Coconut.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Coconut</h5>
+                <p class="card-text">The coconut tree is botanically named Cocus Nucifera. Coconut water contains 94% water (on average) with approximately 46 calories a cup.</p>
+                <a href="#" class="btn btn-info">Buy Now!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/Guava.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Guava</h5>
+                <p class="card-text">They are often referred to as “super fruits” because of their high vitamin content. Guava leaves are sometimes used in hair products because they are believed to prevent hair loss.</p>
+                <a href="#" class="btn btn-dark">Buy Now!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/Lemon.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Lemon</h5>
+                <p class="card-text">The lemon is a species of small evergreen trees in the flowering plant family Rutaceae, native to Asia, primarily Northeast India, Northern Myanmar or China. </p>
                 <a href="#" class="btn btn-primary">Buy Now!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/King Coconut.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">King Coconut</h5>
+                <p class="card-text">King coconuts are native to Sri Lanka. They are also found in India and Indonesia. King coconuts are larger and have a thicker shell than regular coconuts. They have a more oval shape and a bright orange color.</p>
+                <a href="#" class="btn btn-light">Buy Now!</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../Assets/Tamarind.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Tamarind</h5>
+                <p class="card-text">Tamarind is a good source of vitamins A, C, and K. It is also a good source of fiber, calcium, and iron. Tamarind has been shown to help lower blood sugar levels and improve digestion.</p>
+                <a href="#" class="btn btn-danger">Buy Now!</a>
             </div>
         </div>
     </div>
