--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>buy now</title>
+    <title>Buy now</title>
 </head>
 
 <body>
