Added the buy now page to the button in purchase

--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                        <a class="nav-link text-success" href="../pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-primary" href="./LogIn page/index.html">Login</a>
@@ -41,6 +41,7 @@
         </div>
     </nav>
 
+    <!--Item Purchase-->
 
 </body>
 
