--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -46,7 +46,7 @@
             <div class="card-body">
                 <h5 class="card-title">Bananas</h5>
                 <p class="card-text"> Bananas are a healthy source of fiber, potassium, vitamin B6, vitamin C, and various antioxidants and phytonutrients.</p>
-                <a href="#" class="btn btn-danger">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-danger">Buy Now!</a>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
             <div class="card-body">
                 <h5 class="card-title">Mangoes</h5>
                 <p class="card-text"> Mangoes are an edible stone fruit produced by the tropical tree Mangifera indica.Mangoes were first grown in India over 5,000 years ago.Mangoes grow on trees and in tropical regions.</p>
-                <a href="#" class="btn btn-success">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-success">Buy Now!</a>
             </div>
         </div>
 
@@ -64,7 +64,7 @@
             <div class="card-body">
                 <h5 class="card-title">Wood Apple</h5>
                 <p class="card-text">Wood apple is rich in thiamine and riboflavin, the chemicals that are effective in detoxifying the body.It is sometimes also called monkey fruit.</p>
-                <a href="#" class="btn btn-primary">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-primary">Buy Now!</a>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
             <div class="card-body">
                 <h5 class="card-title">Cashew</h5>
                 <p class="card-text"> The cashew you eat is actually the seed. Initially, it is surrounded by a double shell with components like urushiol and a potential skin irritant.</p>
-                <a href="#" class="btn btn-warning">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-warning">Buy Now!</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -81,7 +81,7 @@
             <div class="card-body">
                 <h5 class="card-title">Coconut</h5>
                 <p class="card-text">The coconut tree is botanically named Cocus Nucifera. Coconut water contains 94% water (on average) with approximately 46 calories a cup.</p>
-                <a href="#" class="btn btn-info">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-info">Buy Now!</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -89,7 +89,7 @@
             <div class="card-body">
                 <h5 class="card-title">Guava</h5>
                 <p class="card-text">They are often referred to as “super fruits” because of their high vitamin content. Guava leaves are sometimes used in hair products because they are believed to prevent hair loss.</p>
-                <a href="#" class="btn btn-dark">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-dark">Buy Now!</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -97,7 +97,7 @@
             <div class="card-body">
                 <h5 class="card-title">Lemon</h5>
                 <p class="card-text">The lemon is a species of small evergreen trees in the flowering plant family Rutaceae, native to Asia, primarily Northeast India, Northern Myanmar or China. </p>
-                <a href="#" class="btn btn-primary">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-primary">Buy Now!</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -105,7 +105,7 @@
             <div class="card-body">
                 <h5 class="card-title">King Coconut</h5>
                 <p class="card-text">King coconuts are native to Sri Lanka. They are also found in India and Indonesia. King coconuts are larger and have a thicker shell than regular coconuts. They have a more oval shape and a bright orange color.</p>
-                <a href="#" class="btn btn-light">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-light">Buy Now!</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -113,7 +113,7 @@
             <div class="card-body">
                 <h5 class="card-title">Tamarind</h5>
                 <p class="card-text">Tamarind is a good source of vitamins A, C, and K. It is also a good source of fiber, calcium, and iron. Tamarind has been shown to help lower blood sugar levels and improve digestion.</p>
-                <a href="#" class="btn btn-danger">Buy Now!</a>
+                <a href="../Purchasing page/index.html" class="btn btn-danger">Buy Now!</a>
             </div>
         </div>
     </div>
