Added basic structure of item purchase

--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -42,6 +42,16 @@
     </nav>
 
     <!--Item Purchase-->
+    <div class="container-fluid bg-danger">
+        <div class="row">
+            <div class="col-6 bg-info">
+                <img src="./Assets/single item purchase.png" alt="" srcset="">
+            </div>
+            <div class="col-6">
+
+            </div>
+        </div>
+    </div>
 
 </body>
 
