Added basic code for item

--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -42,14 +42,12 @@
     </nav>
 
     <!--Item Purchase-->
-    <div class="container-fluid bg-danger">
-        <div class="row">
-            <div class="col-6 bg-info">
-                <img src="./Assets/single item purchase.png" alt="" srcset="">
-            </div>
-            <div class="col-6">
-
-            </div>
+    <div class="container-fluid bg-danger item">
+        <div class="col-6 bg-info">
+            <img src="./Assets/single item purchase.png" alt="HEllo" srcset="item">
+        </div>
+        <div class="col-6">
+            <h1>Hi</h1>
         </div>
     </div>
 
