--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -117,6 +117,10 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@10.1.0" />
+<script>
+    const { Client } = Appwrite;
+</script>
 </body>
 
 </html>
