--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -62,7 +62,7 @@
                         <a class="nav-link text-success" href="../pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="./LogIn page/index.html">Login</a>
+                        <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
                     </li>
                 </ul>
             </div>
