--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html lang="en"<!DOCTYPE html>
 
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
                         <a class="nav-link text-success" href="./pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="./LogIn page/index.html">Login</a>
+                        <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
                     </li>
                 </ul>
             </div>
