--- a/client/pages/store.html
+++ b/client/pages/store.html
@@ -31,7 +31,7 @@
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="../LogIn page/index.html">Login</a>
+                        <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
                     </li>
                 </ul>
             </div>
