Fixed login home page error

--- a/client/LogIn page/register.html
+++ b/client/LogIn page/register.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
@@ -44,8 +44,8 @@
         <div class="row gx-lg-5 align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h1 class="my-5 display-3 fw-bold ls-tight">
-              The best offer <br />
-              <span class="text-primary">for your business</span>
+              The best value <br />
+              <span class="text-primary">for your offer</span>
             </h1>
             <p style="color: hsl(217, 10%, 50.8%)">
              We have seasonal offers available for seasonal fruits and weekly offers on Sundays and Mondays.
