--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link text-success" href="./pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
+                        <a class="btn btn-primary" href="../client/login page/index.html    ">Login</a>
                     </li>
                 </ul>
             </div>
