--- a/client/LogIn page/index.html
+++ b/client/LogIn page/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-expand-lg px-5 bg-dark">
     <div class="container-fluid">
         <a class="Navbar-logo navbar-brand" href="#">
-            <img class="rounded-circle" src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+            <img class="rounded-circle" src="../Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
         </a>
         <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active text-success" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                    <a class="nav-link text-success" href="../pages/store.html">Store</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
                   </div>
       
                   <div>
-                    <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                    <p class="mb-0">Don't have an account? <a href="./register.html" class="text-white-50 fw-bold">Sign Up</a>
                     </p>
                   </div>
       
