--- a/client/index.html
+++ b/client/index.html
@@ -57,9 +57,6 @@
                             <a href="#">about us</a>
                         </li>
                         <li>
-                            <a href="#">our services</a>
-                        </li>
-                        <li>
                             <a href="./pages/store.html">our Products</a>
                         </li>
                         <li>
@@ -68,49 +65,17 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>get help</h4>
-                    <ul>
-                        <li>
-                            <a href="#">FAQ</a>
-                        </li>
-                        <li>
-                            <a href="#">shipping</a>
-                        </li>
-                        <li>
-                            <a href="#">returns</a>
-                        </li>
-                        <li>
-                            <a href="#">order status</a>
-                        </li>
-                        <li>
-                            <a href="#">payment options</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-col">
                     <h4>online shop</h4>
                     <ul>
                         <li>
-                            <a href="#">watch</a>
-                        </li>
-                        <li>
-                            <a href="#">bag</a>
-                        </li>
-                        <li>
-                            <a href="#">shoes</a>
-                        </li>
-                        <li>
-                            <a href="#">dress</a>
+                            <a href="./pages/store.html">Store</a>
                         </li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>follow us</h4>
                     <div class="social-links">
-                        <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#">
+                        <a href="https://www.instagram.com/sife_semmantaluwa_farms/">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
