Still debugging the code for gallery

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,20 @@
         <h1 class="heading text-dark">Semmandalluwa</h1>
         <p class="subheading text-dark">We are a Farm based in Puttallam,SriLanka which aims to provide fresh food to the SriLankan people</p>
     </div>
+
+ <!---Gallery-->
+ <div class="slider row gx-lg-5 align-items-center mb-5">
+    <div class="slide col-lg-4">
+      <img src="./Assets/Guava.jpg" alt="Image 1">
+    </div>
+    <div class="slide col-lg-4">
+      <img src="./Assets/Guava.jpg" alt="Image 2">
+    </div>
+    <div class="slide col-lg-4">
+      <img src="./Assets/Banana.jpg" alt="Image 3">
+    </div>
+  </div>
+  
     <footer class="footer">
         <div class="container">
             <div class="row">
