Error debugging in progress

--- a/client/index.html
+++ b/client/index.html
@@ -49,17 +49,17 @@
     </div>
 
  <!---Gallery-->
- <div class="slider row gx-lg-5 align-items-center mb-5">
-    <div class="slide col-lg-4">
-      <img src="./Assets/Guava.jpg" alt="Image 1">
+ <div class="row">
+    <div class="col-lg-4">
+        <img src="./Assets/card-test-image.jpg" alt="">
     </div>
-    <div class="slide col-lg-4">
-      <img src="./Assets/Guava.jpg" alt="Image 2">
+    <div class="col-lg-4">
+        <img src="./Assets/card-test-image.jpg" alt="">
     </div>
-    <div class="slide col-lg-4">
-      <img src="./Assets/Banana.jpg" alt="Image 3">
+    <div class="col-lg-4">
+        <img src="./Assets/card-test-image.jpg" alt="">
     </div>
-  </div>
+ </div>
   
     <footer class="footer">
         <div class="container">
