--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+    <!--Navbar section-->
     <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
             <a class="Navbar-logo navbar-brand" href="#">
@@ -49,18 +51,20 @@
     </div>
 
  <!---Gallery-->
- <div class="row">
-    <div class="col-lg-4">
-        <img src="./Assets/card-test-image.jpg" alt="">
-    </div>
-    <div class="col-lg-4">
-        <img src="./Assets/card-test-image.jpg" alt="">
-    </div>
-    <div class="col-lg-4">
-        <img src="./Assets/card-test-image.jpg" alt="">
-    </div>
- </div>
+    <div class="row">
+        <div class="col-lg-8">
+            <img src="./Assets/card-test-image.jpg" alt="">
+        </div>
+        <div class="col-lg-8">
+            <img src="./Assets/card-test-image.jpg" alt="">
+        </div>
+        <div class="col-lg-8">
+            <img src="./Assets/card-test-image.jpg" alt="">
+        </div>
+     </div>
+
   
+ <!--Footer-->
     <footer class="footer"> 
         <div class="container">
             <div class="row">
