--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
     </div>
 
  <!---Gallery-->
-    <div class="row">
+    <div class="row gallery">
         <div class="col-lg-8">
             <img src="./Assets/card-test-image.jpg" alt="">
         </div>
