Added test files and made a few changes

--- a/client/index.html
+++ b/client/index.html
@@ -52,13 +52,13 @@
 
  <!---Gallery-->
     <div class="row gallery">
-        <div class="col-lg-8">
+        <div class="col-3">
             <img src="./Assets/card-test-image.jpg" alt="">
         </div>
-        <div class="col-lg-8">
+        <div class="col-3">
             <img src="./Assets/card-test-image.jpg" alt="">
         </div>
-        <div class="col-lg-8">
+        <div class="col-3">
             <img src="./Assets/card-test-image.jpg" alt="">
         </div>
      </div>
