Changed path of store page in all pages

--- a/client/LogIn page/index.html
+++ b/client/LogIn page/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                    <a class="nav-link text-success" href="../Store/store.html">Store</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-primary" href="../LogIn page/login.html">Login</a>
@@ -95,7 +95,7 @@
           <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
             We have seasonal offers available for seasonal fruits and weekly offers on Sundays and Mondays.
           </p>
-          <a class="btn btn-primary" href="../pages/store.html" role="button">Store</a>
+          <a class="btn btn-primary" href="../Store/store.html" role="button">Store</a>
           <a class="btn btn-primary" href="./register.html" role="button">Sign Up</a>
         </div>
   
