--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                        <a class="nav-link text-success" href="./Store/store.html">Store</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-primary" href="../client/login page/index.html">Login</a>
@@ -75,7 +75,7 @@
                             <a href="#">about us</a>
                         </li>
                         <li>
-                            <a href="./pages/store.html">our Products</a>
+                            <a href="./Store/store.html">our Products</a>
                         </li>
                         <li>
                             <a href="#">privacy policy</a>
