--- a/client/LogIn page/register.html
+++ b/client/LogIn page/register.html
@@ -30,7 +30,7 @@
                     <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-success" href="./pages/store.html">Store</a>
+                    <a class="nav-link text-success" href="../Store/store.html">Store</a>
                 </li>
             </ul>
         </div>
@@ -92,7 +92,7 @@
           <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
             We have seasonal offers available for seasonal fruits and weekly offers on Sundays and Mondays.
           </p>
-          <a class="btn btn-primary" href="../pages/store.html" role="button">Store</a>
+          <a class="btn btn-primary" href="../Store/store.html" role="button">Store</a>
           <a class="btn btn-primary" href="./index.html" role="button">Log In</a>
         </div>
   
