--- a/client/Store/store.html
+++ b/client/Store/store.html
@@ -40,7 +40,7 @@
     </nav>
 
     <!--Item Cards section-->
-    <div class="container product-card-list mt-4 ">
+    <div class="container product-card-list mt-4 mb-3">
         <div class="card ">
             <img src="../Assets/Banana.jpg" class="card-img-top" alt="...">
             <div class="card-body">
