--- a/client/index.html
+++ b/client/index.html
@@ -47,22 +47,11 @@
         </div>
     </nav>
     <div class="landing-Background text-white d-flex flex-column justify-content-center align-items-start px-5">
-        <h1 class="heading text-dark">Semmandalluwa</h1>
-        <p class="subheading text-dark">We are a Farm based in Puttallam,SriLanka which aims to provide fresh food to the SriLankan people</p>
+        <h1 class="heading">Semmandalluwa</h1>
+        <p class="subheading">We are a Farm based in Puttallam,SriLanka which aims to provide fresh food to the SriLankan people</p>
     </div>
 
- <!---Gallery-->
-    <div class="row gallery">
-        <div class="col-3">
-            <img src="./Assets/card-test-image.jpg" alt="">
-        </div>
-        <div class="col-3">
-            <img src="./Assets/card-test-image.jpg" alt="">
-        </div>
-        <div class="col-3">
-            <img src="./Assets/card-test-image.jpg" alt="">
-        </div>
-     </div>
+
 
   
  <!--Footer-->
