--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <input type="text" placeholder="Search..">
+      </div>
     <!--Navbar section-->
     <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
