--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,3 @@
-    
-<html lang="en"<!DOCTYPE html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,9 +44,8 @@
     </nav>
     <div class="landing-Background text-white d-flex flex-column justify-content-center align-items-start px-5">
         <h1 class="heading">Semmandalluwa</h1>
-        <p class="subheading">We are a Farm based in Puttallam,SriLanka which aims to provide fresh food to the SriLankan people</p>
+        <p class="subheading">We are a Farm based in Puttallam Suburbs,SriLanka which aims to provide fresh food to the SriLankan people</p>
     </div>
-    
 
  <!--Footer-->
     <footer class="footer"> 
