--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <div class="loader"></div>
+
     <!--Navbar section-->
     <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
