--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-   
+    <div class="loader"></div>
 
     <!--Navbar section-->
     <nav class="navbar navbar-expand-lg px-5 bg-dark">
