Added about us to all navbars

--- a/client/Purchasing page/index.html
+++ b/client/Purchasing page/index.html
@@ -28,6 +28,9 @@
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-success" href="../About Us/index.html">About us</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-success" href="../pages/store.html">Store</a>
                     </li>
                     <li class="nav-item">
