--- a/client/Store/store.html
+++ b/client/Store/store.html
@@ -31,6 +31,9 @@
                         <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-success" href="../About Us/index.html">About us</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="btn btn-primary" href="../login page/index.html">Login</a>
                     </li>
                 </ul>
