--- a/client/About Us/index.html
+++ b/client/About Us/index.html
@@ -10,6 +10,37 @@
     <title>About Us</title>
 </head>
 <body>
-    
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg px-5 bg-dark">
+        <div class="container-fluid">
+            <a class="Navbar-logo navbar-brand" href="#">
+                <img class="rounded-circle" src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+            </a>
+            <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-success" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="mailto:ahmed.nihal@gmail.com">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="../About Us/index.html">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="../Store/store.html">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary" href="../login page/index.html">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </nav>
 </body>
 </html>
