--- a/client/About Us/index.html
+++ b/client/About Us/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg px-5 bg-dark">
         <div class="container-fluid">
             <a class="Navbar-logo navbar-brand" href="#">
-                <img class="rounded-circle" src="./Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
+                <img class="rounded-circle" src="../Assets/Navbar Logo.png" alt="logo" srcset="" height="40px" width="40px">
             </a>
             <a class="navbar-brand text-danger" href="#">Semmandalluwa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,5 +42,8 @@
         </div>
         </div>
     </nav>
+
+   
+
 </body>
 </html>
