Added proper code for bg error to about us

--- a/client/About Us/index.html
+++ b/client/About Us/index.html
@@ -42,8 +42,11 @@
         </div>
         </div>
     </nav>
-
    
+    <!--Background Image-->
+        <div class="background">
+            
+        </div>
 
 </body>
 </html>
