Created about us basic page

--- a/client/About Us/index.html
+++ b/client/About Us/index.html
@@ -42,5 +42,20 @@
         </div>
         </div>
     </nav>
+
+    <!--Main content-->
+        <div class="container mt-3">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="../Assets/farm-portrait.jpg" alt="Image" class="image">
+                </div>
+                <div class="col-lg-6 text-center mt-5">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sollicitudin quam eget nisl pharetra convallis. Proin et nisi nec est accumsan mattis. Pellentesque at faucibus nisi. Aliquam hendrerit tincidunt massa at dignissim. In faucibus mi sed ante tristique, in pretium nulla rutrum. Duis sed vestibulum sapien. Donec eget tempus sem. Vivamus in mauris posuere, porta turpis et, pellentesque est. Mauris malesuada commodo pellentesque. Fusce bibendum diam ut magna viverra fringilla. Ut eu tincidunt nisl, quis faucibus mi. Maecenas sed pulvinar felis. Donec risus arcu, faucibus at nulla in, ullamcorper sodales purus. Sed iaculis facilisis lorem, id ultricies sem dapibus eget. Phasellus elementum suscipit eleifend.
+                    </p>
+                </div>
+            </div>
+        </div>
+
 </body>
 </html>
