--- a/client/index.html
+++ b/client/index.html
@@ -52,41 +52,31 @@
         <p class="subheading">We are a Farm based in Puttallam Suburbs,SriLanka which aims to provide fresh food to the SriLankan people</p>
     </div>
 
- <!--Footer-->
-    <footer class="footer"> 
+    <footer>
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>company</h4>
-                    <ul>
-                        <li>
-                            <a href="#">about us</a>
-                        </li>
-                        <li>
-                            <a href="./Store/store.html">our Products</a>
-                        </li>
-                        <li>
-                            <a href="#">privacy policy</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>online shop</h4>
-                    <ul>
-                        <li>
-                            <a href="./pages/store.html">Store</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="https://www.instagram.com/sife_semmantaluwa_farms/">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
+            <div class="footer-content">
+                <h3>Contact Us</h3>
+                <p>Email: ahmed.nihal@gmail.com</p>
+                <p>Phone: +97466229663</p>
             </div>
+            <div class="footer-content">
+                <h3>Quick Links</h3>
+                 <ul class="list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./About Us/index.html">About</a></li>
+                    <li><a href="./Store/store.html">Store</a></li>
+                    <li><a href="mailto:ahmed.nihal@gmail.com">Contact</a></li>
+                 </ul>
+            </div>
+            <div class="footer-content">
+                <h3>Follow Us</h3>
+                <ul class="social-icons">
+                 <li><a href="https://www.instagram.com/sife_semmantaluwa_farms/"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                </div>
+        </div>
+        <div class="bottom-bar">
+            <p>&copy; 2024 Semmandalluwa . All rights reserved</p>
         </div>
     </footer>
 </body>
