--- a/client/index.html
+++ b/client/index.html
@@ -48,8 +48,8 @@
         </div>
     </nav>
     <div class="landing-Background text-white d-flex flex-column justify-content-center align-items-start px-5">
-        <h1 class="heading">Semmandalluwa</h1>
-        <p class="subheading">We are a Farm based in Puttallam Suburbs,SriLanka which aims to provide fresh food to the SriLankan people</p>
+        <h1 class="heading h1">Semmandalluwa</h1>
+        <h2 class="subheading h2">We are a Farm based in Puttallam Suburbs,SriLanka which aims to provide fresh food to the SriLankan people</p>
     </div>
 
     <footer>
